// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketBody last read message should not pass \`isLastReadMessage\` for a new message 1`] = `
<div
  className="wrapper"
/>
`;

exports[`TicketBody last read message should pass \`isLastReadMessage\` only for the last read message 1`] = `
<div
  className="wrapper"
>
  <TicketMessages
    hasCursor={false}
    highlightedElements={null}
    id="message-0"
    key="message-0"
    lastMessageDatetimeAfterMount={"2017-07-02T03:00:00.000Z"}
    lastReadMessageId={1}
    messages={
      Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "2017-07-01T18:00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        },
      ]
    }
    setStatus={[Function]}
    ticketId={1}
    timezone="UTC"
  />
  <TicketMessages
    hasCursor={false}
    highlightedElements={null}
    id="message-1"
    key="message-1"
    lastMessageDatetimeAfterMount={"2017-07-02T03:00:00.000Z"}
    lastReadMessageId={1}
    messages={
      Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "2017-07-01T19:00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 2,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        },
      ]
    }
    setStatus={[Function]}
    ticketId={1}
    timezone="UTC"
  />
  <TicketMessages
    hasCursor={true}
    highlightedElements={null}
    id="message-2"
    key="message-2"
    lastMessageDatetimeAfterMount={"2017-07-02T03:00:00.000Z"}
    lastReadMessageId={1}
    messages={
      Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "2017-07-01T20:00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": undefined,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        },
      ]
    }
    setStatus={[Function]}
    ticketId={1}
    timezone="UTC"
  />
</div>
`;

exports[`TicketBody should display and highlight the messages 1`] = `
<div
  className="wrapper"
>
  <TicketMessages
    hasCursor={true}
    highlightedElements={
      Object {
        "first": 1,
      }
    }
    id="message-0"
    key="message-0"
    lastMessageDatetimeAfterMount={"2017-07-02T01:00:00.000Z"}
    lastReadMessageId={1}
    messages={
      Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "2017-07-01T18:00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        },
      ]
    }
    setStatus={[Function]}
    ticketId={1}
    timezone="UTC"
  />
</div>
`;

exports[`TicketBody should display and not highlight the messages 1`] = `
<div
  className="wrapper"
>
  <TicketMessages
    hasCursor={true}
    highlightedElements={
      Object {
        "first": 2,
      }
    }
    id="message-0"
    key="message-0"
    lastMessageDatetimeAfterMount={"2017-07-02T01:00:00.000Z"}
    lastReadMessageId={1}
    messages={
      Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "2017-07-01T18:00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        },
      ]
    }
    setStatus={[Function]}
    ticketId={1}
    timezone="UTC"
  />
</div>
`;

exports[`TicketBody should display audit log events with messages 1`] = `
<div
  className="wrapper"
>
  <TicketMessages
    hasCursor={false}
    highlightedElements={null}
    id="message-0"
    key="message-0"
    lastMessageDatetimeAfterMount={"2019-11-16T02:00:00.000Z"}
    lastReadMessageId={1}
    messages={
      Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "2017-07-01T18:00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        },
      ]
    }
    setStatus={[Function]}
    ticketId={1}
    timezone="UTC"
  />
  <Connect(AuditLogEventContainer)
    event={
      Immutable.Map {
        "data": null,
        "account_id": 1,
        "context": "foo",
        "user_id": 1,
        "isEvent": true,
        "created_datetime": "2019-11-15 19:00:00.000000",
        "object_type": "Ticket",
        "type": "ticket-assigned",
        "id": 1,
        "object_id": 1,
      }
    }
    isLast={true}
    key="event-1"
    setHighlightedElements={[Function]}
  />
</div>
`;

exports[`TicketBody should display events with messages 1`] = `
<div
  className="wrapper"
>
  <TicketMessages
    hasCursor={false}
    highlightedElements={null}
    id="message-0"
    key="message-0"
    lastMessageDatetimeAfterMount={"2017-07-02T02:00:00.000Z"}
    lastReadMessageId={1}
    messages={
      Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "2017-07-01T18:00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        },
      ]
    }
    setStatus={[Function]}
    ticketId={1}
    timezone="UTC"
  />
  <Connect(EventContainer)
    event={
      Immutable.Map {
        "channel": "email",
        "meta": null,
        "integration_id": null,
        "public": true,
        "subject": "Some subject",
        "uri": "http://example.com/messages/1",
        "via": "email",
        "receiver": Immutable.Map {
          "id": 2,
          "email": "mary.poppins@example.com",
          "name": "Mary Poppins",
          "firstname": "Mary",
          "lastname": "Poppins",
        },
        "external_id": null,
        "stripped_signature": null,
        "from_agent": false,
        "isEvent": true,
        "attachments": Immutable.List [],
        "opened_datetime": null,
        "created_datetime": "2017-07-01T19:00:00",
        "stripped_html": null,
        "stripped_text": null,
        "sender": Immutable.Map {
          "id": 1,
          "email": "john.doe@example.com",
          "name": "John Doe",
          "firstname": "John",
          "lastname": "Doe",
        },
        "id": 1,
        "actions": null,
        "failed_datetime": null,
        "is_retriable": false,
        "isMessage": false,
        "rule_id": null,
      }
    }
    isLast={true}
    key="event-1"
  />
</div>
`;

exports[`TicketBody should display messages 1`] = `
<div
  className="wrapper"
>
  <TicketMessages
    hasCursor={true}
    highlightedElements={null}
    id="message-0"
    key="message-0"
    lastMessageDatetimeAfterMount={"2017-07-02T01:00:00.000Z"}
    lastReadMessageId={1}
    messages={
      Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "channel": "email",
          "created_datetime": "2017-07-01T18:00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": false,
          "id": 1,
          "integration_id": null,
          "isMessage": true,
          "is_retriable": false,
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "mary.poppins@example.com",
            "firstname": "Mary",
            "id": 2,
            "lastname": "Poppins",
            "name": "Mary Poppins",
          },
          "rule_id": null,
          "sender": Object {
            "email": "john.doe@example.com",
            "firstname": "John",
            "id": 1,
            "lastname": "Doe",
            "name": "John Doe",
          },
          "stripped_html": null,
          "stripped_signature": null,
          "stripped_text": null,
          "subject": "Some subject",
          "uri": "http://example.com/messages/1",
          "via": "email",
        },
      ]
    }
    setStatus={[Function]}
    ticketId={1}
    timezone="UTC"
  />
</div>
`;

exports[`TicketBody should display phone events 1`] = `
<div
  className="wrapper"
>
  <PhoneEvent
    event={
      Immutable.Map {
        "id": 1,
        "isMessage": false,
        "isEvent": true,
        "created_datetime": "2017-07-01T19:00:00",
        "type": "incoming-phone-call",
      }
    }
    isLast={false}
    key="event-1"
  />
  <PhoneEvent
    event={
      Immutable.Map {
        "id": 2,
        "isMessage": false,
        "isEvent": true,
        "created_datetime": "2017-07-01T19:05:00",
        "type": "outgoing-phone-call",
      }
    }
    isLast={true}
    key="event-2"
  />
</div>
`;
